# =====================================================
# Enable CTest
# =====================================================
enable_testing()

# =====================================================
# Sub test modules
# =====================================================
add_subdirectory(runtime)
add_subdirectory(domain)
